Attempting an alternative menu placement to avoid z-index issues with Opera and Firefox
svn path=/trunk/; revision=21429

--- a/look/generic.css
+++ b/look/generic.css
@@ -777,7 +777,7 @@ h4#subpages + ul li:nth-child(odd) {
 
 /* menu */
 #menu {
-  margin-left: -15px;
+  margin: 220px 0 0 -15px;
 }
 
 #menu a {
@@ -795,8 +795,8 @@ h4#subpages + ul li:nth-child(odd) {
 
 #menu ul {
   list-style: none;
-  margin: -220px 0 0 0;
-  padding: 220px 0 0 0;
+/*  margin: -220px 0 0 0;
+  padding: 220px 0 0 0;*/
   border-left: 15px solid rgb(240,240,240);
 }
 
